objects/X7S_Events_Volunteer_Need__c/X7S_Events_Volunteer_Need__c.object-meta.xml
<CustomObject>
    <description>Object to support Events Volunteer Need records as part of the Events accelerator from 7Summits.</description>
    <label>7S Events Volunteer Need</label>
    <nameField>
        <label>Volunteer Need Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Events Volunteer Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>