objects/X7S_Events_Volunteer_Need__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Criteria like &quot;Must be able to lift 25lbs&quot;</description>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>