objects/X7S_Events_Volunteer_Need__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>X7S_Event__c</referenceTo>
    <relationshipLabel>7S Events Volunteer Needs</relationshipLabel>
    <relationshipName>X7S_Events_Volunteer_Needs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>