objects/X7S_Events_Volunteer_Need__c/fields/Volunteers_Needed__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Needed__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Volunteers Needed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>