objects/X7S_Events_Volunteer_Need__c/fields/Volunteers_Registered__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Registered__c</fullName>
    <label>Volunteers Registered</label>
    <summaryForeignKey>X7S_Events_Volunteer_Registration__c.Volunteer_Need__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>