objects/X7S_Events_Volunteer_Need__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>